--- a/styles/vars.css
+++ b/styles/vars.css
@@ -1,7 +1,7 @@
 /*Основные переменные CSS*/
 :root{
   --bg-color:#46495C;
-  --font-family-form-title: "Open Sans";
+  --font-family-form-title: 'Open Sans', sans-serif;
   --font-family-form-label: "Gothic A1", sans-serif;
   --font-color-form-title: rgba(70, 73, 92, 1);
   --font-color-label:rgba(0, 28, 61, 0.56);
